# churchsuite-chat

./: .config.json  .env.example  .gitignore  CHURCHSUITE_API.md  DECISIONS.md  Dockerfile  GLOBAL_RULES.md  PLANNING.md  README.md  TASK.md  conftest.py  context_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  update_churchsuite_docs.sh  vault.json
.context7/: config.json
.github/workflows/: ci.yml
.windsurf/rules/: check-planning-and-tasks.md
backend/: app.py  config.py  main.py  requirements.txt  test_routes.py
backend/churchsuite/: client.py  models.py
backend/config/: logging.py  settings.py
backend/endpoints/: auth.py  chat.py  churchsuite.py  giving.py  people.py  rate_limit.py
backend/llm/: chat.py  tools.py
backend/routers/: auth.py  chat.py  churchsuite.py
backend/schemas/: auth.py  base_requests.py  requests.py  responses.py
backend/security/: __init__.py  asgi_rate_limiter.py  audit_middleware.py  cookie_handler.py  csrf.py  dependencies.py  fastapi_middleware.py  fastapi_rate_limiter.py  input_sanitizer.py  jwt_middleware.py  middleware.py  (+10 more)
docs/: jwt-auth.md
src/: app.py
tests/: test_audit_middleware.py  test_auth.py  test_auth_service.py  test_chat_endpoint.py  test_fastapi_rate_limiter.py  test_input_sanitizer.py  test_input_validation.py  test_jwt.py  test_jwt_middleware.py  test_jwt_middleware_test.py  test_jwt_middleware_updated.py  test_main.py  test_middleware.py  test_rate_limit.py  test_redis_dependency.py  test_security.py  test_security_headers.py  test_security_headers_native.py  test_utils.py
(+18 files in other folders)
